--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -34,6 +34,16 @@
   </div>
 
   <div class="field">
+    <label for="">
+      Name of group/organisation of participants in the session:
+    </label>
+    <p>
+      Only answer this question if the group/organisation or participants is different from the one running the session (e.g. if you are running the session with staff of a particular organisation)
+    </p>
+    <%= form.text_area '[settings][name_of_group_organisation_of_participants]' %>
+  </div>
+
+  <div class="field">
     <%= render partial: 'form_elements/collection_buttons',
     locals: {
       form: form,
@@ -134,6 +144,10 @@
 
   <p>
     Participants' organisation name: <%= survey.settings["participant_org_name"] %>
+  </p>
+
+  <p>
+    Name of group/organisation of participants in the session: <%= survey.settings["name_of_group_organisation_of_participants"] %>
   </p>
 
   <p>
