Add new question for name of group or organisation or participants if different from the one running the session

--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -35,7 +35,7 @@
 
   <div class="field">
     <label for="">
-      Name of group/organisation of participants in the session:
+      Name of group/organisation of participants in the session
     </label>
     <p>
       Only answer this question if the group/organisation or participants is different from the one running the session (e.g. if you are running the session with staff of a particular organisation)
