--- a/app/views/surveys/_organisational_fields.html.erb
+++ b/app/views/surveys/_organisational_fields.html.erb
@@ -89,10 +89,11 @@
 
   <div class="field">
     <label for="">
-      5. Date established
+      5. What year was the group/organisation established? (if known)
     </label>
     (Date selection)
-    <%= form.date_select '[settings][date_established]', start_year: 1900, end_year: Date.current.year %>
+    <%= form.date_select '[settings][date_established]', start_year: 1900, end_year: Date.current.year,
+        discard_day: true, discard_month: true %>
   </div>
 
   <div class="field">
