--- a/app/views/surveys/_organisational_fields.html.erb
+++ b/app/views/surveys/_organisational_fields.html.erb
@@ -148,9 +148,9 @@
     <%= render partial: 'form_elements/collection_buttons',
       locals: { 
       form: form,
-      type: "radio",
+      type: "checkbox",
       option_class: "two-col",
-      title: "9. Geographical scope",
+      title: "Geographical scope of the group/organisation (please select all that apply)",
       rb_config: ['[settings][geographical_scope]', surveys_data("geographical_scope"), :first, :last]
     } %>
   </div>
@@ -281,8 +281,19 @@
   </p>
 
   <p>
-    Geographical scope: <%= survey.settings["geographical_scope"] %>
+    Geographical scope of the group/organisation (please select all that apply):
   </p>
+  <p>
+    <% geographical_scope = survey.settings["geographical_scope"].map{|k| surveys_data("geographical_scope")[k]}.compact! %>
+    <ul>
+    <% geographical_scope.each do |gs| %>
+      <li>
+        <%= gs %>
+      </li>
+    <% end %>
+    </ul>
+  </p>
+
 
   <!---
   <p>
