--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -22,7 +22,9 @@
   </p>
 
   <%= link_to "Take the survey", new_survey_response_path(@survey), class: 'button' %>
-  <%= link_to 'Edit', edit_survey_path(@survey), class: 'button' %>
+  <% if @survey.id != Survey.find_by_master(true).id %>
+    <%= link_to 'Edit', edit_survey_path(@survey), class: 'button' %>
+  <% end %>
   <p>
     <popup icon="share" title="Share" url="<%= new_survey_response_url(@survey) %>"></popup>
   </p>
