open analysis link in another tab

--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -32,8 +32,14 @@
     cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
 
-  <%= link_to "https://futureofconservation.shinyapps.io/go-fox/", title: 'GO-FOX Analysis site', class: 'button--large-chevrons flex flex-v-center' do %>
-    GO-FOX Analysis site: <i class="material-icons">chevron_right</i><i class="material-icons">chevron_right</i>
+  <%= link_to "https://futureofconservation.shinyapps.io/go-fox/", 
+    target: '_blank',
+    title: 'GO-FOX Analysis site',
+    class: 'button--large-chevrons flex flex-v-center' do 
+  %>
+    GO-FOX Analysis site: 
+    <i class="material-icons">chevron_right</i>
+    <i class="material-icons">chevron_right</i>
   <% end %>
 
   <ul class="table--results ul-unstyled">
