--- a/app/views/global/_funder_logos.html.erb
+++ b/app/views/global/_funder_logos.html.erb
@@ -1,4 +1,4 @@
 <div class="footer__funder-logos flex flex-v-center flex-wrap">
-  <%= link_to '', 'http://www.cambridgeconservation.org/', title: 'Cambridge Conservation Initiative', class: 'logo--cci' %>
-  <%= link_to '', 'https://esrc.ukri.org/', title: 'Economic & Social Research Council', class: 'logo--esrc' %>
+  <%= link_to '', 'http://www.cambridgeconservation.org/', title: 'Cambridge Conservation Initiative', class: 'logo--cci logo--margin' %>
+  <%= link_to '', 'https://esrc.ukri.org/', title: 'Economic & Social Research Council', class: 'logo--esrc logo--margin' %>
 </div>
