--- a/app/views/global/_survey_warning.html.erb
+++ b/app/views/global/_survey_warning.html.erb
@@ -1,5 +1,6 @@
 <simple-modal 
   title="<%= t('survey_warning.title') %>" 
   description="<%= survey_warning_description(master).html_safe %>" 
-  button-text="Accept">
+  button-text="Accept"
+  logo-class="logo--foc">
 </simple-modal>
