--- a/app/views/global/_sign_up_warning.html.erb
+++ b/app/views/global/_sign_up_warning.html.erb
@@ -1,5 +1,6 @@
 <simple-modal 
   title="<%= t('sign_up_warning.title') %>" 
   description="<%= t('sign_up_warning.description').html_safe %>" 
-  button-text="Accept">
+  button-text="Accept"
+  logo-class="logo--gofox">
 </simple-modal>
