--- a/app/assets/stylesheets/utilities/_base.scss
+++ b/app/assets/stylesheets/utilities/_base.scss
@@ -93,6 +93,12 @@ figcaption {
   font-size: rem-calc(14);
 }
 
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
 //--------------------------------------------------
 // site structure
 //--------------------------------------------------
