edit form intro text

--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -34,7 +34,7 @@
   <% end %>--->
 
   <p>
-    In this section we ask questions about the specific group or class to which you will be sending the survey.
+    Please tell us about the specific context in which you plan to use this survey by answering the following questions.
   </p>
 
   <%= render partial: 'form_elements/text_field', 
