update new survey form

--- a/app/views/form_elements/_collection_buttons.html.erb
+++ b/app/views/form_elements/_collection_buttons.html.erb
@@ -1,6 +1,6 @@
 <div class="field">
   <fieldset>
-    <legend><%= title %></legend>
+    <legend><%= label %></legend>
     <% if local_assigns[:description] %>
       <p> <%= description %> </p>
     <% end %>
