--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,7 +45,7 @@
               form: f,
               type: "radio",
               option_class: "two-col",
-              title: "Type of Organisation/Group",
+              label: "Type of Organisation/Group",
               rb_config: [:org_type, User.org_types, :last, :first]
             } %>
         </div>
@@ -65,7 +65,7 @@
               form: f,
               type: "radio",
               option_class: "inline",
-              title: "GO-FOX can be used for organisational capacity development or as an educational teaching tool. Which best describes how you plan to use the tool?",
+              label: "GO-FOX can be used for organisational capacity development or as an educational teaching tool. Which best describes how you plan to use the tool?",
               rb_config: [:use_type, User.use_types, :first, :first]
             } %>
         </div>
