--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -1,5 +1,27 @@
-<% if survey.id.nil? %>
+<%
+  context_example = '(e.g. as a training session at Conference X)'
+%>
 
+<% if survey.id.nil? %>
+  <%= render partial: 'form_elements/text_field', 
+    locals: {
+      form: form,
+      id: 'previous_id',
+      name: '[settings][survey_previous_id]',
+      label: 'Previous survey ID',
+      description: 'If you wish to compare results with a previous survey you have conducted, please enter the Survey ID for the previous survey here.'
+    }
+  %>
+
+  <%= render partial: 'form_elements/collection_buttons',
+    locals: {
+      form: form,
+      type: "radio",
+      class: "inline",
+      label: "Default language",
+      rb_config: ['[settings][default_language]', surveys_data("default_language"), :first, :last],
+      description: 'Please choose the language in which your respondents will take the survey. Please note that the GO-FOX interface is only available in English at present.'
+    } %>
   <%= render partial: 'form_elements/text_field', 
     locals: {
       form: form,
@@ -69,6 +91,36 @@
     }
   %>
 
+  <%= render partial: 'form_elements/date_select', 
+    locals: {
+      form: form,
+      id: 'session_date',
+      name: '[settings][session_date]',
+      label: 'Session date',
+      description: 'Please give the expected date of the session within which you plan to use the survey results (if known)',
+      start_year: Date.current.year
+    }
+  %>
+
+  <%= render partial: 'form_elements/text_field', 
+    locals: {
+      form: form,
+      id: 'other_details',
+      name: '[settings][other_details]',
+      label: 'Any other details',
+      description: 'Please provide any further details about the context within which you plan to use GO-FOX ' + context_example
+    }
+  %>
+
+  <%= render partial: 'form_elements/text_area', 
+    locals: {
+      form: form,
+      id: 'hope_to_achieve',
+      name: '[settings][hope_to_achieve]',
+      label: 'What do you hope to achieve from using GO-FOX with this class?'
+    }
+  %>
+
   <!---
   <div class="field">
     <%= render partial: 'form_elements/collection_buttons',
@@ -93,6 +145,8 @@
   --->
 
 <% else %>
+  <br><hr>
+
   <p>
     Previous survey ID: <%= survey.settings["survey_previous_id"] %>
   </p>
