--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,14 +1,8 @@
 <%
-  #TODO: extract this somewhere sensible
-  context_example = '(e.g. as part of a strategic planning process)'
-  title_example = '(e.g. Staff values survey: 2019)'
-
-  if current_user.use_type == "educational"
-    context_example = '(e.g. as a training session at Conference X)'
-    title_example = '(e.g. Conservation course: class of 2019)'
-  end
+  title_example = current_user.use_type == "educational" ? 
+    '(e.g. Conservation course: class of 2019)' : 
+    '(e.g. Staff values survey: 2019)'
 %>
-
 <%= form_with(model: survey, local: true) do |form| %>
   <% if survey.errors.any? %>
     <div id="error_explanation">
@@ -43,7 +37,6 @@
       </div>
     <% end %>
   <% end %>--->
-
   <p>
     Please tell us about the specific context in which you plan to use this survey by answering the following questions.
   </p>
@@ -58,66 +51,11 @@
     }
   %>
 
-  <%= render partial: 'form_elements/text_field', 
-    locals: {
-      form: form,
-      id: 'previous_id',
-      name: '[settings][survey_previous_id]',
-      label: 'Previous survey ID',
-      description: 'If you wish to compare results with a previous survey you have conducted, please enter the Survey ID for the previous survey here.'
-    }
-  %>
-
-  <%= render partial: 'form_elements/collection_buttons',
-    locals: {
-      form: form,
-      type: "radio",
-      class: "inline",
-      label: "Default language",
-      rb_config: ['[settings][default_language]', surveys_data("default_language"), :first, :last],
-      description: 'Please choose the language in which your respondents will take the survey. Please note that the GO-FOX interface is only available in English at present.'
-    } %>
-
-  <!---<div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :survey_description %>
-  </div>--->
-
   <% if current_user.admin? || current_user.use_type == "organisational" %>
     <%= render partial: 'organisational_fields', locals: { survey: survey, form: form } %>
   <% elsif current_user.use_type == "educational" %>
     <%= render partial: 'educational_fields', locals: { survey: survey, form: form } %>
   <% end %>
-
-  <%= render partial: 'form_elements/date_select', 
-    locals: {
-      form: form,
-      id: 'session_date',
-      name: '[settings][session_date]',
-      label: 'Session date',
-      description: 'Please give the expected date of the session within which you plan to use the survey results (if known)',
-      start_year: Date.current.year
-    }
-  %>
-
-  <%= render partial: 'form_elements/text_field', 
-    locals: {
-      form: form,
-      id: 'other_details',
-      name: '[settings][other_details]',
-      label: 'Any other details',
-      description: 'Please provide any further details about the context within which you plan to use GO-FOX ' + context_example
-    }
-  %>
-
-  <%= render partial: 'form_elements/text_area', 
-    locals: {
-      form: form,
-      id: 'hope_to_achieve',
-      name: '[settings][hope_to_achieve]',
-      label: 'What do you hope to achieve from using GO-FOX with this class?'
-    }
-  %>
 
   <h4>Customised Questions</h4>
   <p>
