update reponses page text

--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -25,11 +25,7 @@
   </div>
 
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    The figure above provides a summary of the results of everyone who has taken your survey so far. Their individual results can be explored below. When you are ready to analyse the results of your group, you can download the full data file by clicking on the “CSV” button above. Save this file wherever you choose, and then click on the “GO-FOX analysis site” button below. This will open the GO-FOX analysis website in a new tab. The site will open on the “Upload your data” page. Click the “Browse” button and then choose your data file from its saved location. You are then ready to explore your results by navigating through the various tabs on the left hand side of the page. Further instructions for how to analyse and interpret your results, including a tutorial video, can be found on the <a href="/admin/support" title="Go to the support page" target="_blank">support</a> page. 
   </p>
 
   <%= link_to "https://futureofconservation.shinyapps.io/go-fox/", 
