--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -16,7 +16,8 @@
     </div>
   <% end %>
 
-  <!---<% I18n.available_locales.each do |locale| %>
+  <!---
+<% I18n.available_locales.each do |locale| %>
     <h1><%= locale %></h1>
     <%= form.globalize_fields_for locale do |ff| %>
       <div class="field">
@@ -29,7 +30,8 @@
         <%= ff.text_area :description, id: :survey_description %>
       </div>
     <% end %>
-  <% end %>--->
+  <% end %>
+--->
   <p>
     Please tell us about the specific context in which you plan to use this survey by answering the following questions.
   </p>
@@ -69,15 +71,17 @@
 
   <% if current_user.admin? %>
     <div class="field">
-      <%= form.label :locked %>
-      <%= form.check_box :locked, id: :survey_locked %>
+      <%= form.label :Survey Closed? %>
+      <%= form.check_box :Survey Closed?, id: :survey_locked %>
     </div>
   <% end %>
   
+  <!---
   <div class="field">
     <%= form.label :published %>
     <%= form.check_box :published, id: :survey_published %>
   </div>
+  --->
 
   <div class="actions">
     <%= form.submit %>
