--- a/app/views/surveys/_organisational_fields.html.erb
+++ b/app/views/surveys/_organisational_fields.html.erb
@@ -61,7 +61,7 @@
     form: form,
     type: "radio",
     label: "Type of group/organisation of respondents to your survey",
-    description: 'Which of the following best describes the group/organisation of respondents to your survey',
+    description: 'Which of the following best describes the group/organisation of respondents to your survey?',
     rb_config: ['[settings][type_of_organisation]', surveys_data("type_of_organisation"), :first, :last] 
   } %>
   <%= form.text_field '[settings][org_type_other]' %>
