style add/remove options as buttons

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -168,6 +168,12 @@
     padding: 0;
   }
 
+  &--plus {
+  }
+
+  &--minus {
+  }
+
   &--log-in {
     @extend %button;
     @extend %button--oblong;
