--- a/app/assets/stylesheets/components/form/_form.scss
+++ b/app/assets/stylesheets/components/form/_form.scss
@@ -122,3 +122,4 @@ textarea {
 @import './select.scss';
 @import './questions.scss';
 @import './validation.scss';
+@import './cocoon-association-form.scss';
