--- a/app/views/surveys/_option_fields.html.erb
+++ b/app/views/surveys/_option_fields.html.erb
@@ -6,5 +6,8 @@
     </p>
   </div>
 
-  <%= link_to_remove_association "Remove Option", f, {class: "button"} %>
+  <%= link_to_remove_association f, {class: "button button--beige"} do %>
+    <i class="material-icons">remove</i>
+    Remove Option
+  <% end %>
 </div>
