add option numbers

--- a/app/views/surveys/_option_fields.html.erb
+++ b/app/views/surveys/_option_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="customised-question__option nested-fields">
   <div class="field">
     <p>
-      <%= f.label :text, "Option Text" %>
+      <%= f.label :text, "Option" %>
       <%= f.text_field :text %>
     </p>
   </div>
