--- a/app/assets/stylesheets/components/form/_cocoon-association-form.scss
+++ b/app/assets/stylesheets/components/form/_cocoon-association-form.scss
@@ -13,3 +13,13 @@
     margin-top: 1px;
   }
 }
+
+.customised-question__option {
+  @for $i from 1 through 10 {
+    &:nth-child(#{$i}) {
+      label::after {
+        content: ' #{$i}';
+      }
+    }
+  }
+}
