update sign up text

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,8 +31,8 @@
       </slide>
 
       <slide :last="true">
-        <p>In this section we ask questions about the group/organisation that you,
-          the survey administrator, belong to. This may be different from groups/organisations
+        <p>In this section we ask questions about the group or organisation that you,
+          the survey administrator, belong to. This may be different from groups or organisations
           with which you will use the tool. We will ask you for details of those users when you
           create a survey.</p>
         <div class="field">
