add consultancy as conservation activity and fix survey show page for arrays

--- a/app/views/surveys/_organisational_fields.html.erb
+++ b/app/views/surveys/_organisational_fields.html.erb
@@ -254,7 +254,7 @@
   <p>
     What kind of conservation activities does the organisation do?:
     <ul>
-    <% kinds = survey.settings["kind_of_conservation_activities"].map{|k| surveys_data("kind_of_conservation_activities")[k.to_sym]}.compact! %>
+    <% kinds = survey.settings["kind_of_conservation_activities"].map{|k| surveys_data("kind_of_conservation_activities")[k]}.compact! %>
     <% kinds.each do |kind| %>
       <li>
         <%= kind %>
@@ -285,7 +285,7 @@
 
   <p>
     Organisation funding sources:
-    <% sources = survey.settings["organisation_funding_sources"].map{|k| surveys_data("organisation_funding_sources")[k.to_sym]}.compact! %>
+    <% sources = survey.settings["organisation_funding_sources"].map{|k| surveys_data("organisation_funding_sources")[k]}.compact! %>
     <ul>
     <% sources.each do |source| %>
       <li>
