--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -194,7 +194,7 @@
   </p>
   --->
   <p>
-    Session date: <%= survey.settings["session_date"].map{|k,v| v}.join("-").to_date %>
+    Session date: <%= to_date(survey.settings["session_date"].map{|k,v| v}.join("-")) %>
   </p>
 
   <p>
