--- a/app/views/global_public/_topbar.html.erb
+++ b/app/views/global_public/_topbar.html.erb
@@ -1,5 +1,6 @@
 <div class="topbar--public gutters">
   <div class="topbar__content flex flex-v-center flex-h-between">
     <%= link_to '', root_path, title: 'gofox', class: 'logo--foc' %>
+    <%= render 'global_public/i18n' %>
   </div>
 </div>
