update ffi link

--- a/app/views/global/_researcher_logo_banner.html.erb
+++ b/app/views/global/_researcher_logo_banner.html.erb
@@ -5,5 +5,5 @@
 </div>
 <div class="flex-wrap flex-center">
   <%= link_to "", "https://www.unep-wcmc.org/", title: "UN Environment World Conservation Monitoring Centre", class: "logo--unepwcmc" %>
-  <%= link_to "", "https://www.unep-wcmc.org/", title: "Fauna & Flora International", class: "logo--ffi" %>
+  <%= link_to "", "https://www.fauna-flora.org/", title: "Fauna & Flora International", class: "logo--ffi" %>
 </div>
