add basic language toggle styling

--- a/app/assets/stylesheets/utilities/_helpers.scss
+++ b/app/assets/stylesheets/utilities/_helpers.scss
@@ -61,6 +61,8 @@
   }
 }
 
+.relative { position: relative; }
+
 //--------------------------------------------------
 // margin & padding
 //--------------------------------------------------
