--- a/app/views/global_public/_i18n.html.erb
+++ b/app/views/global_public/_i18n.html.erb
@@ -1,5 +1,14 @@
-<ul class="float-right">
-  <li><%= link_to_unless I18n.locale == :en , "English", set_language_english_path %></li>
-  <li><%= link_to_unless I18n.locale == :es, "Espanol", set_language_spanish_path %></li>
-  <li><%= link_to_unless I18n.locale == :fr, "Français", set_language_french_path %></li>
-</ul>
+<expandable-item>
+  <template slot="header">
+    <span><%= available_languages[I18n.locale] %></span>
+  </template>
+  <template slot="content">
+    <ul class="ul-unstyled">
+      <li><%= link_to_unless I18n.locale == :en , "English", set_language_english_path %></li>
+      <li><%= link_to_unless I18n.locale == :es, "Español", set_language_spanish_path %></li>
+      <li><%= link_to_unless I18n.locale == :fr, "Français", set_language_french_path %></li>
+    </ul>
+  </template>
+</expandable-item>
+
+
